# QtLucide

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakeLists_debug.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  INTEGRATION_COMPLETE.md  QtLucide.pri  README.md  RESOURCE_BUILD_GUIDE.md  SECURITY.md  WARP.md  build_all_resources.py  build_resources.bat  docker-compose.yml  meson.build  meson_options.txt  mkdocs.yml  test_gallery_minimal.cpp  test_gallery_simple.cpp  test_icon_names.cpp  test_metadata_manager.cpp  test_resource_packaging.cpp  test_resources.cpp  verify_build.py  xmake.lua
examples/basic_usage/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp  meson.build
examples/gallery/: CMakeLists.txt  CMakeLists_structure_test.txt  CategoryFilterWidget.cpp  CategoryFilterWidget.h  GalleryMainWindow.cpp  GalleryMainWindow.h  IconDetailsPanel.cpp  IconDetailsPanel.h  IconExportDialog.cpp  IconExportDialog.h  IconGridWidget.cpp  IconGridWidget.h  IconItem.cpp  IconItem.h  IconMetadataManager.cpp  IconMetadataManager.h  PreferencesDialog.cpp  PreferencesDialog.h  README.md  SearchWidget.cpp  SearchWidget.h  main.cpp  meson.build
examples/gallery/docs/: COMPLETION_REPORT.md  FINAL_STATUS_REPORT.md  README_IMAGE_GALLERY.md  REORGANIZATION_SUMMARY.md
examples/gallery/resources/: gallery_resources.qrc
examples/gallery/resources/styles/: dark-theme.qss  modern-theme.qss
examples/gallery/src/config/: LayoutConfig.h
examples/gallery/src/core/: BatchExportManager.cpp  BatchExportManager.h  BatchExportWorker.h  ExportProgressWidget.cpp  ExportProgressWidget.h  ExportUtils.cpp  ExportUtils.h  GalleryTypes.h
examples/gallery/src/core/managers/: ContentManager.cpp  ContentManager.h  FavoritesManager.cpp  FavoritesManager.h  ManagerStubs.h  (+5 more)
examples/gallery/src/main/: GalleryMainWindow.h  main.cpp  main_enhanced.cpp  main_export_import.cpp  main_minimal.cpp  main_simple.cpp  main_structure_test.cpp  main_ultra_simple.cpp
examples/gallery/tests/integration/: test_gallery_integration.cpp  test_icon_integration.cpp  test_image_gallery.cpp
examples/gallery/tests/unit/: CMakeLists.txt  test_gallery_components.cpp  test_image_browsing.cpp  test_performance.cpp  test_search_functionality.cpp  test_sidebar_functionality.cpp  test_thumbnail_grid.cpp  test_ui_responsiveness.cpp
examples/submodule_example/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md  main.cpp
src/: CMakeLists.txt  QtLucide.cpp  QtLucideIconEngine.cpp  QtLucideIconPainter.cpp  meson.build
tests/: BUILD_AND_TEST_SUMMARY.md  CMakeLists.txt  README.md  README_COMPREHENSIVE_TESTS.md  main.cpp  meson.build  test_accessibility.cpp  test_accessibility.h  test_boundary_conditions.cpp  test_error_handling.h  test_export_functionality.cpp  test_export_functionality.h  test_gallery_icon_loading.cpp  test_gallery_icon_loading.h  test_icon_loading.cpp  test_icon_loading.h  test_image_gallery_functionality.cpp  test_integration.cpp  test_integration.h  test_memory_management.cpp  test_performance_regression.cpp  test_performance_regression.h  test_platform_specific.cpp  test_platform_specific.h  test_qtlucide.cpp  test_qtlucide.h  test_svg_rendering.cpp  test_svg_rendering.h  test_thread_safety.cpp  test_ui_components.cpp  test_ui_components.h
tests/functional/: CMakeLists.txt  test_accessibility.cpp  test_accessibility.h  test_export_functionality.h  test_image_gallery_functionality.cpp
tests/gallery/: CMakeLists.txt  MIGRATION_SUMMARY.md  gallery_test_runner.cpp
tests/gallery/basic/: CMakeLists.txt  basic_test_runner.cpp  test_core_integration.cpp  test_core_integration.h  test_library_availability.cpp  test_library_availability.h  test_resource_loading.cpp  test_resource_loading.h
tests/gallery/components/: CMakeLists.txt  component_test_runner.cpp
tests/gallery/components/core/: test_batch_export_manager.h  test_theme_manager.cpp  test_theme_manager.h
tests/gallery/components/widgets/: test_modern_search_widget.cpp  test_modern_search_widget.h
tests/gallery/integration/: CMakeLists.txt  integration_test_runner.cpp  test_application_startup.cpp  test_application_startup.h  test_error_handling.cpp  test_error_handling.h  test_gallery_icon_loading.cpp  test_gallery_icon_loading.h  test_gallery_integration.cpp  test_gallery_integration.h  test_icon_integration.cpp  test_icon_loading.cpp  test_icon_loading.h  test_image_gallery.cpp  test_ui_interactions.cpp  test_ui_interactions.h
tests/gallery/performance/: CMakeLists.txt  test_gallery_performance.cpp  test_gallery_performance.h  test_icon_rendering_performance.cpp  test_icon_rendering_performance.h  test_performance.cpp
tests/gallery/unit/: CMakeLists.txt  test_content_manager.cpp  test_gallery_components.cpp  test_icon_metadata_manager.cpp  test_image_browsing.cpp  test_search.cpp  test_sidebar.cpp  test_thumbnail_grid.cpp  test_ui_responsiveness.cpp
tests/integration/: CMakeLists.txt  test_integration.cpp  test_ui_components.cpp
tests/performance/: CMakeLists.txt
tests/platform/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/components/: test_batch_export_manager.cpp  test_batch_export_manager.h  test_export_dialog.cpp  test_export_dialog.h  test_file_browser_widget.cpp  test_file_browser_widget.h  test_icon_metadata_manager.cpp  test_icon_metadata_manager.h  test_import_dialog.cpp  test_import_dialog.h  test_modern_search_widget.cpp  test_modern_search_widget.h  test_modern_sidebar_widget.cpp  test_modern_sidebar_widget.h  test_responsive_layout_manager.cpp  test_responsive_layout_manager.h  test_theme_manager.cpp  test_theme_manager.h
tests/unit/core/: test_boundary_conditions.cpp  test_boundary_conditions.h  test_error_handling.cpp  test_icon_engine.cpp  test_icon_engine.h  test_icon_loading.h  test_icon_painter.cpp  test_icon_painter.h  test_memory_management.cpp  test_memory_management.h  test_qtlucide.cpp  test_qtlucide.h  test_svg_rendering.cpp  test_svg_rendering.h  test_thread_safety.cpp  test_thread_safety.h
(+137 files in other folders)
